# soundboard-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  config.rs  custom_error.rs  main.rs  sounds.rs
