[package]
name = "thunderboard-cli"
version = "0.2.1"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["default"]}
dirs = "5.0.1"
toml = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
base64 = "0.21.7"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }